# krankerl

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  tag-release.yml  test.yml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  occ.rs  packaging.rs  sign.rs
src/commands/: changelog.rs  clean.rs  disable.rs  enable.rs  init.rs  login.rs  logs.rs  mod.rs  package.rs  release.rs  sign_package.rs  up.rs  version.rs
src/config/: app.rs  krankerl.rs  mod.rs  reader.rs
src/console/: mod.rs
src/packaging/: archive.rs  artifacts.rs  commands.rs  exclude.rs  mod.rs  pipeline.rs
src/sign/: error.rs  hash.rs  mod.rs
tests/apps/app2/: krankerl.toml
