[package]
name = "krankerl"
version = "0.14.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
description = "A CLI helper to manage Nextcloud apps"
license-file = "LICENSE"
keywords = ["nextcloud", "cli"]
categories = ["development-tools", "development-tools::build-utils"]
edition = "2018"

[dependencies]
base64 = "0.21"
composer = "0.2"
color-eyre = "0.6"
docopt = "1.1"
dirs = "5.0"
flate2 = "1.0"
hex = "0.4"
ignore = "0.4.20"
git2 = { version = "0.17", default-features = false }
nextcloud_appinfo = "0.6.0"
nextcloud_appsignature = "0.7.1"
nextcloud_appstore = "0.8.0"
npm_scripts = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4.38"
tempdir = "0.3"
tokio = { version = "1.16", features = ["full"] }
toml = "0.7.5"
pathdiff = "0.2.1"
xdg = "2.5.0"

[dev-dependencies]
fs_extra = "1.3.0"
